
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct dirent {int d_name; } ;


 int DELAY ;
 int alphasort ;
 int perror (char*) ;
 int scan_processes (int ) ;
 int scandir (char*,struct dirent***,int ,int ) ;
 int sleep (int ) ;

void find_processes() {

           struct dirent **namelist;
           int n;

 while(1) {

           n = scandir("/proc", &namelist, 0, alphasort);

           if (n < 0)
               perror("scandir");
          else

        sleep(DELAY);

        while(n--) scan_processes(namelist[n]->d_name);

        }
}
