; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19240.c_find_processes.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19240.c_find_processes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dirent = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"/proc\00", align 1
@alphasort = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [8 x i8] c"scandir\00", align 1
@DELAY = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @find_processes() #0 {
  %1 = alloca %struct.dirent**, align 8
  %2 = alloca i32, align 4
  br label %3

3:                                                ; preds = %0, %27
  %4 = load i32, i32* @alphasort, align 4
  %5 = call i32 @scandir(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), %struct.dirent*** %1, i32 0, i32 %4)
  store i32 %5, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp slt i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %3
  %9 = call i32 @perror(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0))
  br label %13

10:                                               ; preds = %3
  %11 = load i32, i32* @DELAY, align 4
  %12 = call i32 @sleep(i32 %11)
  br label %13

13:                                               ; preds = %10, %8
  br label %14

14:                                               ; preds = %18, %13
  %15 = load i32, i32* %2, align 4
  %16 = add nsw i32 %15, -1
  store i32 %16, i32* %2, align 4
  %17 = icmp ne i32 %15, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %14
  %19 = load %struct.dirent**, %struct.dirent*** %1, align 8
  %20 = load i32, i32* %2, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.dirent*, %struct.dirent** %19, i64 %21
  %23 = load %struct.dirent*, %struct.dirent** %22, align 8
  %24 = getelementptr inbounds %struct.dirent, %struct.dirent* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @scan_processes(i32 %25)
  br label %14

27:                                               ; preds = %14
  br label %3
}

declare dso_local i32 @scandir(i8*, %struct.dirent***, i32, i32) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @scan_processes(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
